@@ -1,3 +1,5 @@
+12/18/12 fix Line.getYIntercept to handle case where numerator or denominator is zero
+12/18/12 factor out duplicated code in for fractional y-intercept in slope-intercept equations
 12/18/12 add fractional y-intercept to slope-intercept equations (some duplicated code)
 12/18/12 TestEquationNodes: add test case for fractional y-intercept
 12/18/12 TestEquationNodes: delete some redundant test cases to make room for testing fractional y-intercept
